--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1><a href="https://github.com/benfujii/Projects">Ben Fujii's Portfolio</a></h1>
-							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a recent graduate from Chapman University, where I studied<br />
+							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst from Chapman University, where I studied<br />
 							finance and data analytics.  Through my coursework and work experience, I have<br> become skilled using SQL, Python, R, Tableau, and Excel.  </p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
