--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1><a href="https://github.com/benfujii/Projects">Ben Fujii's Portfolio</a></h1>
-							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst from Chapman University, where I studied<br />
-							finance and data analytics.  Through my coursework and work experience, I have<br> become skilled using SQL, Python, R, Tableau, and Excel.  </p>
+							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst with a strong foundation in data analyticsw and a passion for uncovering insights that drive better business decisions.<br />
+							I studied Finance and Data Analytics at Chapman University and have prior work experience at Oracle within their financial analyst rotational program, where I've supported FP&A teams across cloud infrastructure, SaaS, and customer success.<br>
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
