--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1><a href="https://github.com/benfujii/Projects">Ben Fujii's Portfolio</a></h1>
-							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst with a strong foundation in data analyticsw and a passion for uncovering insights that drive better business decisions.<br />
+							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst with a strong foundation in data analytics 
+								and a passion for uncovering insights that drive better business decisions.
 							I studied Finance and Data Analytics at Chapman University and have prior work experience at Oracle within their financial analyst rotational program, where I've supported FP&A teams across cloud infrastructure, SaaS, and customer success.<br>
 							</p>
 							<ul class="actions">
