--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 								and a passion for uncovering insights that drive better business decisions.<br> 
 								 <br>
 							I studied Finance and Data Analytics at Chapman University and have prior work experience at Oracle within their financial analyst rotational program, 
-								where I've supported FP&A teams across cloud infrastructure, SaaS, and customer success.<br>
+								where I've supported FP&A teams across cloud infrastructure, SaaS, and customer success.  I've developed forecasting tools, automated reporting processes, and led cost-savings
+								initiatives.<br>
+								 <br>
+								This portfolio showcases some of the data analytics projects I worked on during my time at Chapman University, where I applied tools like Python, SQL, R, Tableau, and Excel to 
+								answer real-world questions using large datasets.  These experiences helped shape my analytical approach and problem-solving mindset, the same ones I now bring to my professional work.
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
