--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 							<p>I'm <a href="https://www.linkedin.com/in/benfujii/">@BenFujii</a> and I am a financial analyst with a strong foundation in data analytics 
 								and a passion for uncovering insights that drive better business decisions.<br> 
 								 <br>
-							I studied Finance and Data Analytics at Chapman University and have prior work experience at Oracle within their financial analyst rotational program, 
-								where I've supported FP&A teams across cloud infrastructure, SaaS, and customer success.  I've developed forecasting tools, automated reporting processes, and led cost-savings
+							I studied finance and data analytics at Chapman University and have prior work experience at Oracle within their financial analyst rotational program, 
+								where I supported FP&A teams across cloud infrastructure, SaaS, and customer success.  I've developed forecasting tools, automated reporting processes, and led cost-savings
 								initiatives.<br>
 								 <br>
 								This portfolio showcases some of the data analytics projects I worked on during my time at Chapman University, where I applied tools like Python, SQL, R, Tableau, and Excel to 
